<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="bottom"
        android:autofillHints=""
        android:background="#A9FDEB"
        android:clickable="false"
        android:focusable="false"
        android:gravity="bottom|start"
        android:inputType="none"
        android:text="@string/default_display"
        android:textSize="50sp"
        tools:ignore="LabelFor" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:columnCount="4"
        android:columnOrderPreserved="true"
        android:rowCount="5"
        android:rowOrderPreserved="true">

        <!-- First row -->
        <ImageButton
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/reset"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/braces"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/braces"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/percent"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/division"
            android:scaleType="fitCenter" />

        <!-- Second row -->
        <ImageButton
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/seven"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/eight"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/nine"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/multiplication"
            android:scaleType="fitCenter" />

        <!-- Third row -->
        <ImageButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/four"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/five"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/six"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/minus"
            android:scaleType="fitCenter" />

        <!-- Fourth row -->
        <ImageButton
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/one"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/two"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/three"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/plus"
            android:scaleType="fitCenter" />
        <!-- Fifth row -->
        <ImageButton
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/zero"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/comma"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/comma"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/modulo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/modulo"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:contentDescription="@string/result"
            android:scaleType="fitCenter" />


    </GridLayout>

</LinearLayout>
